--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=https://raw.githubusercontent.com/JuanGomes404/Rental-Cars/main/style.css">
     <title>Rental Cars</title>
 </head>
 <body>
