--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 
                 <img src="https://raw.githubusercontent.com/JuanGomes404/Rental-Cars/main/uno.png" alt="" >
             </div>
-            <div id="renegade" class="item">
+            <div id="argo" class="item">
                 <h2>Fiat Argo 1.0 2020</h2>
                 <h4>R$ 160,00 por dia</h4>
                 <h5>Categoria: SUV</h5>
-                <img src="img/argo.png" alt="">
+                <img src="https://raw.githubusercontent.com/JuanGomes404/Rental-Cars/main/argo.png" alt="">
             </div>
         </section>
 
