--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/JuanGomes404/Rental-Cars/main/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rental Cars</title>
 </head>
 <body>
